force-app/main/default/objects/JobStreamC__c/JobStreamC__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>JobStreamC</label>
</CustomObject>