force-app/main/default/objects/JobStreamC__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate</label>
    <type>Checkbox</type>
</CustomField>