force-app/main/default/objects/JobStreamC__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interviewer</label>
    <type>Checkbox</type>
</CustomField>