force-app/main/default/objects/JobStreamC__c/fields/Job_Applications__c.field-meta.xml
<CustomField>
    <fullName>Job_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Applications</label>
    <type>Checkbox</type>
</CustomField>