force-app/main/default/objects/JobStreamC__c/fields/JobPosting__c.field-meta.xml
<CustomField>
    <fullName>JobPosting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JobPosting</label>
    <type>Checkbox</type>
</CustomField>